--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Math Quiz - Welcome</title>
+    <title>Quiz Exam - Welcome</title>
     <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
@@ -36,3 +36,4 @@
     <script src="/js/script.js"></script>
   </body>
 </html>
+
